# tofu-nuggets

./: .gitattributes  .gitignore  CLAUDE.md  MEMORY.md  README.md
.github/workflows/: ci.yml  release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/nsis/: hooks.nsh
app/src-tauri/src/: appstate.rs  badges.rs  badges_mac.rs  desktop.rs  desktop_mac.rs  editor.rs  hotkey.rs  hover.rs  icons.rs  index.rs  links.rs  logfile.rs  main.rs  mainwin.rs  overlay.rs  paths.rs  settings.rs  storage.rs  tray.rs  updater.rs  watcher.rs
app/ui/: badges.css  badges.html  badges.js  editor.css  editor.html  editor.js  hotkeys.js  main.css  main.html  main.js  overlay.css  overlay.html  overlay.js  package-lock.json  package.json  settings.css  settings.html  settings.js  theme.js  vite.config.js
docs/: ARCHITECTURE.md  GLOSSARY.md  MVP.md  SECURITY.md  V0.1.1.md  V0.1.3.md
spikes/badge-reparent/: Cargo.toml  README.md
spikes/badge-reparent/src/: main.rs
spikes/hover-detect/: Cargo.toml
spikes/hover-detect/src/: main.rs
