[package]
name = "tofu-nuggets"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webview2-com = "0.38"
windows-core-061 = { package = "windows-core", version = "0.61" }


windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
notify = "8.2.0"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.27.0"
